Infra/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
